# wuju_companion

./: .env.example  .gitignore  .prettierignore  AGENTS.md  CLAUDE.md  DESKTOP-MIGRATION-PLAN.md  El-Companero-Arquitectura-Contratos.docx  El-Companero-Concepto.docx  README.md  docker-compose.yml  eslint.config.mjs  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  vitest.config.ts
.github/workflows/: ci.yml  desktop-build.yml
app/: globals.css  layout.tsx  page.tsx
app/customization/: page.tsx
app/workshop/: page.tsx
apps/desktop/: README.md  package.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/permissions/: ocr_screenshot.toml
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/web/: next.config.mjs  package.json  tailwind.config.ts
components/customization/: AccessoryBar.tsx  (+10 more)
desktop-voice-spike/: README.md  package.json
desktop-voice-spike/src-tauri/: Cargo.toml  tauri.conf.json
desktop-voice-spike/src-tauri/capabilities/: default.json
desktop-voice-spike/src-tauri/src/: lib.rs  main.rs
docs/: ASSETS.md  BRAND.md  CONTRATOS.md  DATAMCP.md  DEPLOY.md  DEV-A.md  DEV-B.md  DEV-C.md  DEV-D.md  DEV-E.md  N8N.md  PITCH.md  PROMPTS.md  SEED.md  SKETCH.md  assets-log.md  bundle-spec.md  demo-video-script.md  pitch-deck.md
prisma/: schema.prisma  seed.ts
schemas/: metadata.schema.json  permissions.schema.json  version.schema.json  voice.schema.json
scripts/: pg-local.sh  run-prod-vps.sh
(+125 files in other folders)
